--- a/source/index.html
+++ b/source/index.html
@@ -167,8 +167,7 @@
                   <use href="img/sprite.svg#left" />
                 </svg>
               </div>
-              <div class="swiper-slide"><img src="./img/judges1.png" width="260" height="294" alt="Фото Анна Павлова">
-              </div>
+              <div class="swiper-slide"><img src="./img/judges1.png" width="260" height="294" alt="Фото Анна Павлова"></div>
               <div class="swiper-slide"><img src="./img/judges2.png" width="260" height="294"alt="Фото Алексей Лавров">
               </div>
               <div class="swiper-slide"><img src="./img/judges3.png" width="260" height="294" alt="Фото Александр Пашков">
