--- a/source/index.html
+++ b/source/index.html
@@ -167,12 +167,25 @@
                   <use href="img/sprite.svg#left" />
                 </svg>
               </div>
-              <div class="swiper-slide"><img src="./img/judges1.png" width="260" height="294" alt="Фото Анна Павлова"></div>
-              <div class="swiper-slide"><img src="./img/judges2.png" width="260" height="294"alt="Фото Алексей Лавров">
+              <div class="swiper-slide">
+                <div class="judges__image">
+                  <img class="judges__img" src="./img/judges1.png" width="260" height="294" alt="Фото Анна Павлова">
+                </div>
               </div>
-              <div class="swiper-slide"><img src="./img/judges3.png" width="260" height="294" alt="Фото Александр Пашков">
+              <div class="swiper-slide">
+                <div class="judges__image">
+                  <img class="judges__img" src="./img/judges2.png" width="260" height="294"alt="Фото Алексей Лавров">
+                </div>
               </div>
-              <div class="swiper-slide"><img src="./img/judges4.png" width="260" height="294" alt="Фото Мария Кетова">
+              <div class="swiper-slide">
+                <div class="judges__image">
+                  <img class="judges__img" src="./img/judges3.png" width="260" height="294" alt="Фото Александр Пашков">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="judges__image">
+                  <img class="judges__img" src="./img/judges4.png" width="260" height="294" alt="Фото Мария Кетова">
+                </div>
               </div>
               <div class="swiper-button-next">
                 <svg width="18" height="34" viewBox="0 0 18 34" xmlns="http://www.w3.org/2000/svg">
