Добавлена секция Features

--- a/source/index.html
+++ b/source/index.html
@@ -178,6 +178,17 @@
             </div>
           </div>
     </section>
+    <section class="features">
+        <h2 class="visually-hidden">Раздел преимущества</h2>
+            <div class="jury__info">
+            <h3 class="jury__header">Наши преимущества</h3>
+            <div class="features__wrapper">
+              <div class="features__squa  re">
+
+              </div>
+            </div>
+          </div>
+    </section>
     </main>
     <footer>
       <div class="container"></div>
